<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="tvshows">Series</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="rating">7.5</string>
    <string name="duration">%sh %sm</string>
    <string name="release">Release</string>
    <string name="release_placeholder">Release Date</string>
    <string name="seasons">%s Seasons</string>
    <string name="duration_placeholder">Duration</string>
    <string name="director">Director</string>
    <string name="producer">Producer/Creator</string>
    <string name="watchlist">WATCHLIST</string>
    <string name="rating_placeholder">Rating(IMDb)</string>
    <string name="synopsis_placeholder">Synopsis</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ullamcorper magna ac pretium hendrerit. Fusce a laoreet tellus. Etiam porttitor neque a est luctus, aliquet blandit lacus pharetra.</string>
    <string name="seasons_placeholder">Seasons/Episodes</string>
    <string name="share_text">Hey! This %s movie is so good, you definitely have to watch this</string>
    <string name="share_text_tvshow">Hey! This %s series is so good, you definitely have to watch this</string>
    <string name="undo">Undo</string>
    <string name="ok">Ok</string>
    <string name="delete_confirm">Removed from watchlist</string>
</resources>